<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="playlist_maker">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="ShareApp">Поделиться приложением</string>
    <string name="WriteToSupport">Написать в поддержку</string>
    <string name="UserFriendly">Пользовательское соглашение</string>
    <string name="BlackTheme">Темная тема</string>
    <string name="Settings">Настройки</string>
    <string name="library">Медиатека</string>
    <string name="Search">Поиск</string>
    <string name="Not">Нет</string>
    <string name="Yes">Да</string>
    <string name="raiting" translatable="false">Рейтинг этого фильма больше, чем 9?:</string>
    <string name="Question" translatable="false">Вопрос:</string>
    <string name="list_number" translatable="false">2/10</string>
    <string name="courseLink" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="subjectMail">\"Спасибо разработчикам и разработчицам за крутое приложение!\"</string>
    <string name="messageToDevelop">\"Сообщение разработчикам и разработчицам приложения Playlist Maker\"</string>
    <string name="developerEmail" translatable="false">stivprog@yandex.ru</string>
    <string name="agreementLink" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="SearchGeneral">Поиск</string>
</resources>