<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/GeneralActivityLianer"
    android:background="@color/generalBackground">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="62dp"
            android:gravity="top"
            android:padding="12dp"
            android:paddingTop="10dp"
            android:text="@string/playlist_maker"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/white"
            android:textSize="26sp" />
    </FrameLayout>

    <Button
        android:id="@+id/search"
        style="@style/GeneralButtonStyle"
        android:text="@string/Search"
        app:icon="@drawable/search" />

    <Button
        android:id="@+id/library"
        style="@style/GeneralButtonStyle"
        android:text="@string/library"
        app:icon="@drawable/media" />

    <Button
        android:id="@+id/settings"
        style="@style/GeneralButtonStyle"
        android:text="@string/Settings"
        app:icon="@drawable/group"/>

</LinearLayout>