<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="20dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/Question"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/list_number"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/poster" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="63dp"
        android:layout_marginTop="33dp"
        android:gravity="center"
        android:text="@string/raiting"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:layout_marginEnd="10dp"
            android:text="@string/Not"
            android:textColor="@color/black" />

        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/Yes"
            android:textColor="@color/black" />

    </LinearLayout>


</LinearLayout>