<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="0dp">

        <ImageView
            android:id="@+id/arrowBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/arrow_back"
            android:padding="12dp"
            android:layout_gravity="start" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_marginEnd="62dp"
            android:padding="12dp"
            android:paddingRight="86dp"
            android:text="@string/Settings"
            android:textColor="@color/buttonTextColour"
            android:textSize="26sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="21dp"
        android:paddingStart="16dp"
        android:paddingLeft="16dp">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BlackTheme"
            android:textSize="19sp"
            android:textColor="@color/menuColorBlack"/>
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="21dp"
        android:paddingStart="16dp"
        android:paddingLeft="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ShareApp"
            android:textSize="19sp"
            android:textColor="@color/menuColorBlack"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share"
            android:layout_gravity="end" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:padding="21dp"
        android:paddingLeft="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/WriteToSupport"
            android:textSize="19sp"
            android:textColor="@color/menuColorBlack"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/support"
            android:layout_gravity="end" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:padding="21dp"
        android:paddingLeft="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/UserFriendly"
            android:textSize="19sp"
            android:textColor="@color/menuColorBlack"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_forward"
            android:layout_gravity="end" />
    </FrameLayout>


</LinearLayout>